--- a/Part1_MeasureTheZBosonMass.ipynb
+++ b/Part1_MeasureTheZBosonMass.ipynb
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,6 @@
     "cuts1 = cuts0[(cuts0[\"muon_pt\"]).apply(lambda x: x[0] > 20000) & (cuts0[\"muon_pt\"]).apply(lambda x: x[1] > 20000)]\n",
     "\n",
     "#cut2: we require the absolute pseudorapidity of each muon to be below 2.4'\n",
-    "#cuts2 = cuts1[( np.abs(cuts1[\"muon_eta[0]\"]) < 2.4) & ( np.abs(cuts1[\"muon_eta[1]\"]) < 2.4)]\n",
     "\n",
     "cuts2 = cuts1[(cuts1[\"muon_eta\"]).apply(lambda x: np.abs(x[0]) < 2.4) & (cuts1[\"muon_eta\"]).apply(lambda x: np.abs(x[0]) < 2.4)  ]\n",
     "\n",
@@ -622,25 +621,23 @@
     "# We then apply the criteria as before.\n",
     "\n",
     "# For technical reasons Pandas can run intro trouble with complicatied 'slicing' of alrady sliced dataframes, so we first make a new copt of the dataframe.\n",
-    "\n",
-    "cuts2_copy = cuts2.copy()\n",
+    "#cuts2_copy = cuts2.copy()\n",
     "\n",
     "# we add new columns for our first ratio\n",
-    "cuts2_copy.loc[:, 'iso_et20_mu0'] = (pd.Series(cuts2['muon_etcone20']).apply(lambda x: x[0]) / pd.Series(cuts2['muon_pt']).apply(lambda x: x[0]))\n",
-    "cuts2_copy.loc[:, 'iso_et20_mu1'] = (pd.Series(cuts2['muon_etcone20']).apply(lambda x: x[1]) / pd.Series(cuts2['muon_pt']).apply(lambda x: x[1]))\n",
+    "#cuts2_copy.loc[:, 'iso_et20_mu0'] = (pd.Series(cuts2['muon_etcone20']).apply(lambda x: x[0]) / pd.Series(cuts2['muon_pt']).apply(lambda x: x[0]))\n",
+    "#cuts2_copy.loc[:, 'iso_et20_mu1'] = (pd.Series(cuts2['muon_etcone20']).apply(lambda x: x[1]) / pd.Series(cuts2['muon_pt']).apply(lambda x: x[1]))\n",
     "\n",
     "# we place our criteria on the newly created columns\n",
-    "cuts3 = cuts2_copy[(cuts2_copy['iso_et20_mu0'] < 0.1) & (cuts2_copy['iso_et20_mu1'] < 0.1)]\n",
+    "#cuts3 = cuts2_copy[(cuts2_copy['iso_et20_mu0'] < 0.1) & (cuts2_copy['iso_et20_mu1'] < 0.1)]\n",
     "\n",
     "# same proceedure for the other ratio\n",
-    "cuts3_copy = cuts3.copy()\n",
-    "cuts3_copy.loc[:, 'iso_pt20_mu0'] = (pd.Series(cuts3_copy['muon_ptcone30']).apply(lambda x: x[0]) / pd.Series(cuts3_copy['muon_pt']).apply(lambda x: x[0]))\n",
-    "cuts3_copy.loc[:, 'iso_pt20_mu1'] = (pd.Series(cuts3_copy['muon_ptcone30']).apply(lambda x: x[1]) / pd.Series(cuts3_copy['muon_pt']).apply(lambda x: x[1]))\n",
-    "\n",
-    "cuts4 = cuts3_copy[(cuts3_copy['iso_et20_mu0'] < 0.1) & (cuts3_copy['iso_et20_mu1'] < 0.1)]\n",
+    "#cuts3_copy = cuts3.copy()\n",
+    "#cuts3_copy.loc[:, 'iso_pt20_mu0'] = (pd.Series(cuts3_copy['muon_ptcone30']).apply(lambda x: x[0]) / pd.Series(cuts3_copy['muon_pt']).apply(lambda x: x[0]))\n",
+    "#cuts3_copy.loc[:, 'iso_pt20_mu1'] = (pd.Series(cuts3_copy['muon_ptcone30']).apply(lambda x: x[1]) / pd.Series(cuts3_copy['muon_pt']).apply(lambda x: x[1]))\n",
+    "#cuts4 = cuts3_copy[(cuts3_copy['iso_et20_mu0'] < 0.1) & (cuts3_copy['iso_et20_mu1'] < 0.1)]\n",
     "\n",
     "#we copy out finally selected dataframe to a new variable 'finalData' for convenience\n",
-    "finalData =  cuts4 # you will have to change this line when you want to inlcude the muon \n",
+    "finalData =  cuts2 # you will have to change this line when you want to inlcude the muon \n",
     "#isolation criteria, i.e., \"finalData =  cuts4\" \n",
     "\n",
     "#let's check how many events we have selected after all our criteria have been applied\n",
@@ -659,24 +656,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "MomentumNumpy4D([(11385.34290574, -0.29873855,  2.54611571, 114493.93359375),\n",
-       "                 (80951.52429129, -1.87824674,  1.1003188 , 160847.203125  ),\n",
-       "                 (12578.01942036, -1.80881227, -3.6473449 , 255949.703125  ), ...,\n",
-       "                 ( 8831.14225497,  1.20056817,  3.34252066, 153933.53515625),\n",
-       "                 ( 3303.77834057, -1.97673433, -3.25642708, 100889.609375  ),\n",
-       "                 (20711.16554995,  3.10187187, -1.15591947,  96378.5234375 )],\n",
-       "                dtype=[('rho', '<f8'), ('phi', '<f8'), ('eta', '<f8'), ('t', '<f8')])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'finalData' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#first we make arrays of four-vectors for the muons. we make separate arrays for leading and sub-leading muons\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m pt0 \u001b[38;5;241m=\u001b[39m \u001b[43mfinalData\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmuon_pt\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m0\u001b[39m])\u001b[38;5;241m.\u001b[39mto_numpy()\n\u001b[1;32m      3\u001b[0m eta0 \u001b[38;5;241m=\u001b[39m finalData[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmuon_eta\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m0\u001b[39m])\u001b[38;5;241m.\u001b[39mto_numpy()\n\u001b[1;32m      4\u001b[0m phi0 \u001b[38;5;241m=\u001b[39m finalData[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmuon_phi\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m0\u001b[39m])\u001b[38;5;241m.\u001b[39mto_numpy()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'finalData' is not defined"
+     ]
     }
    ],
    "source": [
@@ -709,7 +701,7 @@
     "    }\n",
     ")\n",
     "\n",
-    "# the TLorentzVectorArray class conveniently allows us to simply add the array # to get an array of four-vectors representing the dimuon system in each event\n",
+    "# the vector package conveniently allows us to simply add the arrays to get an array of four-vectors representing the dimuon system in each event\n",
     "lvArray = lvArray0 + lvArray1\n",
     "lvArray"
    ]
