--- a/Part2_RediscoverTheHiggsBoson.ipynb
+++ b/Part2_RediscoverTheHiggsBoson.ipynb
@@ -238,7 +238,7 @@
    "metadata": {},
    "source": [
     "# Step 2. Apply a series of event selections\n",
-    "    - only select events containing two photons with specific pt and \\eta"
+    "    - only select events containing two photons with specific pt and eta"
    ]
   },
   {
