--- a/Part1_MeasureTheZBosonMass.ipynb
+++ b/Part1_MeasureTheZBosonMass.ipynb
@@ -544,7 +544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Optional extra activities\n",
+    "# Optional extra activity\n",
     "\n",
     "The previous activities complete the lab and you should receive a great grade if you complete them all, add your own investagtions on modifications of the analysis and their interpretation as well as writing up a report that is clear and detailed.\n",
     "\n",
@@ -554,7 +554,7 @@
     "\n",
     "To to this, we will have to advance our coding a little, such that it is easy to automatically run our fully analysis with any set of analysis parameters. Practically, we write the entire analysis that \"measures\" the Z mass into a single python function that takes the analysis parmeters as inputs an returns the measure Z mass and standa devaiation. We then plot the results as a function of the parmater choices. Note that for simplicity and speed, I replace our more precise chi-squared fit with a simpler, least-squares fit from curve fit. This is not sufficiently precise to calculate our final result of statitical uncertainty, but is good enough to check for the systematic biases mentioned.\n",
     "\n",
-    "# It's much better to move on to Part 2 of this lab before attempting this optional extra activity!\n",
+    "# Move on to Part 2 of this lab before attempting this optional extra activity!\n",
     "\n"
    ]
   },
